# ai-phishing-detector-portfolio

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend.yml  codeql.yml  frontend.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: dataset.py  headers.py  llm.py  main.py  ml.py  samples.py  schemas.py  siem.py
backend/data/: README.md  demo_emails.csv  emails.csv
backend/model/: pipeline.joblib
backend/scripts/: download_data.py  train_model.py
backend/tests/: conftest.py  test_dataset.py  test_headers.py  test_llm.py  test_main.py  test_ml.py  test_samples.py  test_schemas.py  test_siem.py
docs/: ARCHITECTURE.md  MODEL_CARD.md  attack-navigator-layer.json  execution-batches.md  resume-bullets.md  spec.md
docs/superpowers/plans/: 2026-03-31-phishing-detector.md  2026-04-01-portfolio-readiness.md  2026-04-22-github-cleanup.md
docs/superpowers/specs/: 2026-03-31-phishing-detector-design.md  2026-04-01-portfolio-readiness-design.md  2026-04-22-github-cleanup-design.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  types.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: HeaderAnalysisCard.tsx  LLMResultCard.tsx  MLResultCard.tsx  RiskBadge.test.tsx  RiskBadge.tsx
scripts/: package.json  record-demo.js
